# aegis-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
aegis/: __init__.py
aegis/domain/entities/: document.py  tenant.py
aegis/domain/value_objects/: api_key.py  cost.py  document_version.py  tenant_id.py
alembic/: env.py
scripts/: init-db.sql
tests/unit/domain/: test_tenant_id.py
tests/unit/domain/entities/: test_document.py  test_tenant.py
tests/unit/domain/value_objects/: test_api_key.py  test_cost.py  test_document_version.py
